changes to create property endpoint
